Feat : final commit with all changes